--- a/V1/index.html
+++ b/V1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@600;700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="assets/css/style.css">
-        <title>Document</title>
+        <title>Antoine Petit Developpeur Amiens</title>
     </head>
     <body>
         <header>
@@ -18,7 +18,7 @@
                 <div class="col-10 col-sm-8 col-md-4 navBar m-auto mt-3">
                     <ul class="d-flex justify-content-between list-unstyled text-decoration-none fs-2">
                         <li><a class="nav-link active text-decoration-none text-dark" href=""> Work</a></li>
-                        <li><a class="nav-link text-decoration-none text-dark" href=""> About</a></li>
+                        <li><a class="nav-link text-decoration-none text-dark" href="about.html"> About</a></li>
                         <li><a class="nav-link text-decoration-none text-dark" href=""> Contact</a></li>
                     </ul>
                 </div>
@@ -43,18 +43,19 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-8 m-auto">
+                    <div class="d-none d-sm-flex col-sm-2 m-auto"></div>
+                    <div class="col-sm-6 m-auto">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint quas veniam eveniet quidem nihil ex tempora nam, rerum aliquam hic suscipit, temporibus maiores ad excepturi nobis sed neque, quia numquam dolorem perferendis? Amet asperiores minima laborum vero repellat veritatis unde non illo vitae, praesentium aspernatur voluptas magnam quas, saepe eligendi!</p>
                     </div>
-                    <div class="face col-4 m-auto ">
-                        <img src="/assets/img/face.webp" alt="">
-                    </div>
+                    <img class="face col-sm-2 m-auto" src="/assets/img/face.webp" alt="">
+                    <div class="d-none d-sm-flex col-sm-2 m-auto"></div>
                 </div>
             </section>
             <!-- ================= Fin - Section introduction ==================== -->
             <!-- ================= Section Technos connues ==================== -->
-            <section class="container p-5" id="technos">
-                <div class="accordion">
+            <section class="container w-80 p-5 mt-5" id="technos">
+                <!-- <div class="accordion">
+
                     <ul>
                         <li tabindex="1">
                             <div>
@@ -96,23 +97,122 @@
                                 </a>
                             </div>
                         </li>
+                        <li tabindex="6">
+                            <div>
+                                <a href="#">
+                                    <h2>Capture One</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                </a>
+                            </div>
+                        </li>
+                        <li tabindex="7">
+                            <div>
+                                <a href="#">
+                                    <h2>Capture One</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                </a>
+                            </div>
+                        </li>
+                        <li tabindex="8">
+                            <div>
+                                <a href="#">
+                                    <h2>Capture One</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                </a>
+                            </div>
+                        </li>
                     </ul>
+                </div> -->
+                <div class="row ">
+                    <div class="col-12 text-center m-0 mb-5">
+                        <h2>Compétences</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/htmlLogo.webp" alt="HTML logo" title="HTML">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/cssLogo.webp" alt="CSS logo" title="CSS">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/jsLogo.webp" alt="javascript logo" title="Javascript">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/bootstrapLogo.webp" alt="bootstrap logo" title="Bootstrap">
+                </div>
+                <div class="row ">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/phpLogo.webp" alt="PHP logo" title="PHP">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/mysqlLogo.webp" alt="mySQL logo" title="mySQL">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/meriseLogo.webp" alt="Merise logo" title="Merise">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/wordpressLogo.webp" alt="Wordpress logo" title="Wordpress">
+                </div>
+                <div class="row ">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/oopLogo.webp" alt="oop Logo" title="Object Oriented Programming">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/photoshopLogo.webp" alt="photoshop logo" title="Photoshop">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/seoLogo.webp" alt="SEO logo" title="Search Engine Optimization">
+                    <img class="col-6 col-sm-3 box" src="/assets/img/moreLogo.webp" alt="Plus picture" title="Et bien plus">
                 </div>
             </section>
             <!-- ================= Fin - Section Technos connues ==================== -->
             <!-- ================= Section derniers travaux ==================== -->
-            <section class="container" id="previousWorks"></section>
+            <section class="container mt-5" id="previousWorks">
+                    <div class="col-10 offset-1 ">
+                    <div class="row">
+                        <div class="col-12 text-center mt-5 mb-5">
+                            <h2>Travaux récents</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-sm-8">
+                            <div>
+                                <img class="col-12" src="/assets/img/previous2.webp" alt="">
+                                <img class="col-12" src="/assets/img/previous1.webp" alt="">
+                            </div>
+                        </div>
+                        <img class="col-12 col-sm-4 pr-sm-0 pl-sm-0" src="/assets/img/previous3.webp" alt="">
+                    </div>
+                </div>
+            </section>
             <!-- ================= Fin - derniers travaux ==================== -->
             <!-- ================= Section futures technos ==================== -->
-            <section class="container" id="inProgress"></section>
+            <section class="container w-70 p-5 mt-5" id="inProgress">
+                <div class="row">
+                    <h2 class="text-center mt-5 mb-5">Inch'Allah</h2>
+                </div>
+                    <div class="row">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/reactLogo.webp" alt="React logo" title="React">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/reactNativeLogo.webp" alt="React Native logo" title="React Native">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/nextLogo.webp" alt="Next.js logo" title="Next.js">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/tailwindLogo.webp" alt="Tailwind css logo" title="Tailwind Css">
+                    </div>
+                    <div class="row ">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/vueLogo.webp" alt="Vue.js logo" title="Vue.js">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/nuxtLogo.webp" alt="nuxt.js logo" title="Nuxt.js">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/electronLogo.webp" alt="electron logo" title="electron">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/typescriptLogo.webp" alt="typescript logo" title="Typescript">
+                    </div>
+                </div>
+            </section>
             <!-- ================= Fin - Section futures technos ==================== -->
         </main>
         <!-- ======================== FOOTER ==================== -->
         <footer class="container">
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col-8 d-none d-sm-flex"></div>
+                <div class="col-6 col-sm-2 elswehere pl-2">
+                    <h4>Elsewhere</h4>
+                    <ul>
+                        <li><a href="https://github.com/Toine2687">Github</a></li>
+                        <li><a href="https://antoinepetit.com/">AntoinePetit.com</a></li>
+                        <li><a href="https://www.linkedin.com/in/antoine-petit-197914178/">LinkedIn</a></li>
+                        <li><a href="https://codepen.io/antipetoine">Codepen</a></li>
+                    </ul>
+
+                </div>
+                <div class="col-6 col-sm-2 contact">
+                    <h4>Contact</h4>
+                    <ul>
+                        <li><a href="mailto:ant.petit@pm.me">Mail</a></li>
+                        <li><a href="tel:+33628187860">Phone</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>Antoine Petit · 2023</p>
             </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
