Ajout Values ds About

--- a/V1/about.html
+++ b/V1/about.html
@@ -68,12 +68,37 @@
         <!-- ================= interets ==================== -->
         <section class="container mt-5" id="values">
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <h2>01</h2>
+                    <h3>Titre</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ullam nesciunt quas consequuntur saepe numquam exercitationem, 
+                        sapiente alias deleniti necessitatibus, deserunt quia minus? Error, excepturi!
+                    </p>
+                </div>
+                <div class="col">
+                    <h2>02</h2>
+                    <h3>Titre</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ullam nesciunt quas consequuntur saepe numquam exercitationem, 
+                        sapiente alias deleniti necessitatibus, deserunt quia minus? Error, excepturi!
+                    </p>                </div>
             </div>
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <h2>03</h2>
+                    <h3>Titre</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ullam nesciunt quas consequuntur saepe numquam exercitationem, 
+                        sapiente alias deleniti necessitatibus, deserunt quia minus? Error, excepturi!
+                    </p>                </div>
+                <div class="col">
+                    <h2>04</h2>
+                    <h3>Titre</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Ullam nesciunt quas consequuntur saepe numquam exercitationem, 
+                        sapiente alias deleniti necessitatibus, deserunt quia minus? Error, excepturi!
+                    </p>                </div>
             </div>
         </section>
 
