--- a/V1/index.html
+++ b/V1/index.html
@@ -182,7 +182,7 @@
                     <div class="row ">
                         <img class="col-6 col-sm-3 box" src="/assets/img/vueLogo.webp" alt="Vue.js logo" title="Vue.js">
                         <img class="col-6 col-sm-3 box" src="/assets/img/nuxtLogo.webp" alt="nuxt.js logo" title="Nuxt.js">
-                        <img class="col-6 col-sm-3 box" src="/assets/img/electronLogo.webp" alt="electron logo" title="electron">
+                        <img class="col-6 col-sm-3 box" src="/assets/img/nodeLogo.webp" alt="nodeJS logo" title="NodeJS">
                         <img class="col-6 col-sm-3 box" src="/assets/img/typescriptLogo.webp" alt="typescript logo" title="Typescript">
                     </div>
                 </div>
