V2 avancé, effets onScroll & fond paper

--- a/V2/index.html
+++ b/V2/index.html
@@ -53,7 +53,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="introBottom">
+				<div class="hidden" id="introBottom">
 					<div id="stupidSentence">
 						<h4>Objectif :</h4>
 						<p>Apporter ma <span id="wheelRock1"></span></p>
@@ -61,16 +61,16 @@
 					</div>
 					<img id="wheel" src="assets/img/roueNB.png" alt="" />
 					<div id="tripleImg">
-						<img src="assets/img/demoImg1.jpg" alt="" id="demoImg1" class="triple" />
-						<img src="assets/img/demoImg2.jpg" alt="" id="demoImg2" class="triple" />
-						<img src="assets/img/demoImg3.jpg" alt="" id="demoImg3" class="triple" />
+						<img src="assets/img/Islande3.webp" alt="" id="demoImg1" class="triple" />
+						<img src="assets/img/islande2.webp" alt="" id="demoImg3" class="triple" />
+						<img src="assets/img/islande1.webp" alt="" id="demoImg2" class="triple" />
 					</div>
 				</div>
 				<!-- <img src="assets/img/lines.png" alt="" id="lines" /> -->
 			</section>
 			<section id="resume">
 				<div id="resumeTop">
-					<div id="speech">
+					<div class="hidden" id="speech">
 						<p id="hey">Hey !</p>
 						<p>Je suis Antoine Petit, Developpeur Web et Photographe.</p>
 						<p>Toujours en quête de nouveaux projets, je crée des solutions web offrant une expérience utilisateur simple, agréable et esthétique.</p>
@@ -78,7 +78,7 @@
 						<p>Dans l'optique de proposer un service des plus complets, je me forme en continu aux toutes dernières technologies web.</p>
 						<p><a href="mailto:ant.petit@pm.me">Contactez-moi</a> dès maitenant pour m'expliquer vos besoins.</p>
 					</div>
-					<div id="help">
+					<div class="hidden" id="help">
 						<div id="domains">
 							<p>Disponible pour :</p>
 							<p class="domains">DEVELOPPEMENT WEB & MOBILE</p>
@@ -87,7 +87,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="timeline">
+				<div class="hidden" id="timeline">
 					<div class="container">
 						<div class="gridItem">
 							<div id="gsi0" class="gSubItem">
@@ -127,8 +127,8 @@
 					</div>
 				</div>
 			</section>
-			<section id="homeworks"></section>
-			<section id="pitch">
+			<!-- <section class="hidden" id="homeworks"></section> -->
+			<section class="hidden" id="pitch">
 				<div id="info">
 					<div>
 						<h2>IN<span>F</span>O(s)</h2>
