changement skills & infos

--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
 						</div>
 						<div class="gridItem">
 							<div id="gsi1" class="gSubItem">
-								<p class="job">DEVELOPPEUR WEB</p>
-								<p class="years">23 -</p>
+								<p class="job">DEVELOPPEMENT WEB</p>
+								<p class="years">2022 -</p>
 							</div>
 						</div>
 						<div class="gridItem">
 							<!-- <div id="gsi3" class="gSubItem"></div> -->
 							<div id="gsi2" class="gSubItem">
-								<p class="job">PHOTOGRAPHE PRO</p>
-								<p class="years">11 -</p>
+								<p class="job">PHOTOGRAPHIE PRO</p>
+								<p class="years">2011 -</p>
 							</div>
 						</div>
 						<div class="gridItem">
 							<div id="gsi3" class="gSubItem">
 								<p class="job">COMMERCE ANTIQUITES</p>
-								<p class="years">7 - 10</p>
+								<p class="years">2007 - 2010</p>
 							</div>
 							<!-- <div id="gsi6" class="gSubItem"></div> -->
 						</div>
 						<div class="gridItem">
 							<div id="gsi4" class="gSubItem">
 								<p class="job">FORMATION IMAGE</p>
-								<p class="years">6 - 7</p>
+								<p class="years">2006 - 2007</p>
 							</div>
 						</div>
 					</div>
@@ -130,12 +130,8 @@
 			<!-- <section class="hidden" id="homeworks"></section> -->
 			<section class="hidden" id="pitch">
 				<div id="info">
-					<div>
-						<h2>IN<span>F</span>O(s)</h2>
-						<img id="face" src="assets/img/face.png" alt="" />
-					</div>
 					<div id="infoSpeech">
-						<h4>(1) Pêle Mele</h4>
+						<h4>(4) Pêle Mele</h4>
 						<p>Développeur web passioné par le design, j’ai eu l’occasion de travailler pour plusieurs centaines de clients dans ma précédente carrière de photographe.</p>
 						<p>J’y ai parfait mon sens de l’esthétique et du service et souhaite transposer ces acquis au sein de cette nouvelle aventure qu’est pour moi le développement web. Je crois fermement en une interface au service de l’utilisateur et accorde une importance capitale à l’accessibilité.</p>
 						<h5>«Design as a service»</h5>
@@ -143,23 +139,30 @@
 						<p>Mes 14 années (aïe !) en tant qu’indépendant m’ont également enseigné la maturité, la responsabilité et le besoin d’éprouver une solide détermination dans mon travail.</p>
 						<p>Je sais gérer mon temps et mes priorités de manière efficace, et je suis capable de travailler sous pression tout en respectant les délais.</p>
 						<h5>«Fait avec ❤️»</h5>
-						<p>Enfin, je crois que tout travail doit être fait avec amour. C'est pourquoi je suis passionné par ce que je fais et que je m'efforce toujours de livrer des projets qui reflètent cette passion, sans jamais cesser d’apprendre.</p>
+						<p>Enfin, je crois que tout travail doit être fait avec amour. Etant avant tout passionné, je suis en recherche perpetuelle de nouveaux défis et si je ne connais pas quelque chose, je l'apprends.</p>
+						<h5><a href="mailto:ant.petit@pm.me"> Contactez moi maintenant et discutons !</a></h5>
 					</div>
 				</div>
 				<div id="skills">
+					<div>
+						<h2>IN<span>F</span>O(s)</h2>
+						<img id="face" src="assets/img/face.png" alt="" />
+					</div>
 					<div id="present">
-						<h4>(2) Compétences</h4>
-						<h5>Code + No-Code :</h5>
-						<p>CSS - Vanilla JS - Bootstrap - SCSS - PHP - MySQL - Merise - Wordpress - OOP</p>
-						<h5>Image + branding :</h5>
-						<p>SEO - SMO - Photographie - Figma - Photoshop - Capture One - Lightroom</p>
+						<h4>(1) Compétences</h4>
+						<h5>Front-end :</h5>
+						<p>CSS - Vanilla JS - Bootstrap - SCSS - Wordpress - Figma</p>
+						<h5>Back-end :</h5>
+						<p>PHP - MySQL - Merise - OOP</p>
+						<h5>Soft skills & Image :</h5>
+						<p>MVC - Agile - Trello - Git/Github - SEO - Photographie - Photoshop - Capture One - Lightroom</p>
 					</div>
 					<div id="futures">
-						<h4>(3) Futur (<span>très</span>) proche</h4>
-						<p>React et React Native - Next - NodeJS - TypeScript - GSAP - <a href="mailto:ant.petit@pm.me"> Rendez-vous avec vous ?</a></p>
+						<h4>(2) Futur (<span>très</span>) proche</h4>
+						<p>React et React Native - Next - NodeJS - TypeScript - GSAP - Svelte - <a href="mailto:ant.petit@pm.me"> Rendez-vous avec vous ?</a></p>
 					</div>
 					<div class="links">
-						<h4>(4) Ailleurs</h4>
+						<h4>(3) Ailleurs</h4>
 						<ul>
 							<li><a href="https://bento.me/antoinepetit">Bento.me</a></li>
 							<li><a href="https://github.com/Toine2687">Github</a></li>
